Updating login dark mode toggle with the same fix as the navbar

--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -172,7 +172,13 @@
     drop-shadow(0 0 10px rgba(255, 255, 255, 0.6));
 }
 
-.theme-toggle-btn:hover {
+@media (hover: hover) {
+  .theme-toggle-btn:hover {
+    transform: scale(1.3);
+  }
+}
+
+.theme-toggle-btn:active {
   transform: scale(1.3);
 }
 
